Bug 153756 - Unable to open form wizard (GTK3)
Summary: Unable to open form wizard (GTK3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Database-Forms Database-Wizard
  Show dependency treegraph
 
Reported: 2023-02-20 10:15 UTC by Buovjaga
Modified: 2023-02-22 10:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2023-02-20 10:15:03 UTC
Run with gtk3 backend.

1. Open any Base file, for example attachment 131142 [details] or pick from https://bugs.documentfoundation.org/buglist.cgi?component=Base&f1=attachments.filename&o1=substring&query_format=advanced&v1=odb
2. From Forms tab, select Use Wizard to Create Form

The problem happens both in a debug and a normal build. In a debug build, I see the dialog, but it is not painted. In a non-debug build, the dialog does not appear.

However, I do not see this in bibisect repos 7.5 or 7.6 in a Fedora 30 container run with distrobox.

I see this in the console, but also with other Linux VCL backends:

warn:toolkit.helper:85432:85432:toolkit/source/helper/unowrapper.cxx:183: UnoWrapper::SetWindowInterface: there is already a WindowPeer/ComponentInterface for this VCL window

Arch Linux 64-bit, X11
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e55713dffbe8d8eba18068f6c2af14c10b787220
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 20 February 2023
Comment 1 Xisco Faulí 2023-02-20 11:05:58 UTC
Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e55713dffbe8d8eba18068f6c2af14c10b787220
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 2 Xisco Faulí 2023-02-20 11:06:39 UTC
When I try with X11, LibreOffice hangs.
it seems to be related to the mutex work done by Noel recently
Comment 3 Stéphane Guillou (stragu) 2023-02-20 11:09:10 UTC
Reproduced, Base is frozen with:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b52117c0be97c45824d2897657084f8ac7e9bf42
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Regression, as dialog opens normally in:

Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

No repro with gen VCL.
Comment 4 Xisco Faulí 2023-02-20 11:19:24 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2023-02-15 15:59:57 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2023-02-16 06:26:22 +0000
commit acf37c3a0b54a46de29bafd27ec9b0618bd2d84a (patch)
tree 334c39510e5eb09d2f7aad8edc7b509cb061be2b
parent c3bd52f81bf733a0b9b0560794a54b2ac1e0f444 (diff)
osl::Mutex->std::mutex in GtkSalData

Bisected with: bibisect-linux64-7.6

Adding Cc: to Noel Grandin
Comment 5 Commit Notification 2023-02-20 13:51:06 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/227ea92266c03adb5faba869c64fa316ebff89f6

tdf#153756 Unable to open form wizard (GTK3)

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Buovjaga 2023-02-20 14:50:21 UTC
I verify the fix, thanks.

Could this be related:

When you hover your mouse into and out of the "Available fields" listbox repeatedly, the field names in the box keep getting painted again and again, resulting in a thickened look. I don't see this in the preceding commit.
Comment 7 Julien Nabet 2023-02-22 10:09:42 UTC
Noel: can we put this one to FIXED or is there something to wait for?