tdf#153756 Unable to open form wizard (GTK3)

Revert "osl::Mutex->std::mutex in GtkSalData"
This reverts commit acf37c3a0b54a46de29bafd27ec9b0618bd2d84a.

Change-Id: Ifb03dfcab966cdc69fea8c6fc2ba15eedb57d8f9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147323
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>